branches/0.1/src/objects/DiscussionMessage__c.object
<CustomObject>
    <fields>
        <fullName>DiscussionTopic__c</fullName>
        <label>Discussion Topic</label>
        <referenceTo>DiscussionTopic__c</referenceTo>
        <relationshipLabel>Discussion Messages</relationshipLabel>
        <relationshipName>DiscussionTopic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentMessage__c</fullName>
        <label>Parent Message</label>
        <referenceTo>DiscussionMessage__c</referenceTo>
        <relationshipName>ParentMessage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedBy__c</fullName>
        <label>PostedBy</label>
        <referenceTo>User</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedDate__c</fullName>
        <label>PostedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <type>Lookup</type>
    </fields>
    <label>Discussion Message</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Message Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discussion Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>